static/css/impala/header.less
/* ... */
.html-rtl {
    #aux-nav > ul > li {
        &:hover:after {
            left: 1px;
            right: auto;
        }
        &.legacy {
            a {
                padding: 0 .5em 0 1em;
            }
            a:first-child {
                padding: 0 1em 0 .5em;
            }
        }
        > a:after {
            margin: 0 4px 0 0;
            right: 4px;
            left: auto;
        }
        > ul {
            left: 0;
            right: auto;
        }
    }
}

/** search box */

.header-search {
    position: absolute;
    top: 63px;
    right: 0;
    .gradient-two-color(#2E89CA, #1B5898, #1B5898);
    .border-radius(5px);
    .box-shadow(0 -2px 0 rgba(0, 0, 0, 0.5) inset, 0 2px 0 rgba(0, 0, 0, 0.1));
    padding: 5px 7px 7px;
    width: 280px;
    #search-q,
    .search-button {
        height: 30px;
    }
}
.html-rtl .header-search {
    left: 0;
    right: auto;
}

button.search-button {
    background: #84C63C url(../../img/icons/go-arrow.png) center no-repeat;
    background-image: url(../../img/icons/go-arrow.png),
                      linear-gradient(#84C63C, #489615);
    background-image: url(../../img/icons/go-arrow.png),
                      -webkit-linear-gradient(#84C63C, #489615);
    border: 0;
    float: right;
    cursor: pointer;
    width: 36px;
    .border-radius(6px);
    .box-shadow(0 1px rgba(0, 0, 0, 0.1), 0 -2px rgba(0, 0, 0, 0.1) inset);
}
.html-rtl button.search-button {
    float: left;
    -moz-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
}

.header-search input {
    .border-box();
    background: url(../../img/icons/search.png) no-repeat 8px 50% #fff;
    border: 0;
    .border-radius(4px);
    .box-shadow(0 0 2px rgba(0, 0, 0, 0.4) inset);
    float: left;
    font: 14px @head-sans;
    padding: 6px 6px 6px 32px;
    .width-calc(~'100% - 42px', 238px);
}
.html-rtl .header-search input {
    background-position: 96% 50%;
    float: right;
    padding: 6px 32px 6px 6px;
}

.site-tip, .site-balloon {
    border: 2px solid #e3873b;
    .border-radius(10px);
    display: none;
    font: 14px/16px Arial, sans-serif;
    position: relative;
    margin-top: 22px;
    h3, p {
        display: inline;
    }
    p a {
        font-weight: bold;
    }
}

.site-tip {
    background-color: fadeout(#fff, 50%);
    border-color: #c9ddf2;
    color: #666;
    padding: 10px 45px 10px 15px;
}

.site-balloon {
    background-color: #fcefb7;
    color: #333;
    padding: 15px 45px 15px 15px;

    h3, strong {
        font-weight: bold;
    }
    &:before, &:after {
        content: '';
        display: block;
        width: 0;
        height: 0;
        position: absolute;
        border-left: 18px solid #E3873B;
        border-top: 18px solid transparent;
    }
    &:before {
        left: 34px;
        top: -18px;
    }
    &:after {
        left: 36px;
        top: -13px;
        border-left-color: #FCEFB7;
    }
    p a {
        color: #c40000;
    }
}

#site-notice {
    display: block;
}

.site-balloon, .site-tip, #lightbox, .is-impala .modal {
    .close {
        position: absolute;
        overflow: hidden;
        right: 1em;
        top: 1em;
        width: 25px;
        height: 25px;
        margin: 0;
        .border-radius(4px);
        background: url(../../img/impala/banner-close.png) no-repeat 0 0;
        text-indent: -1000em;
        cursor: pointer;
        &:hover {
            background-color: #c40000;
            background-position: -25px 0;
        }
    }
    .cancel {
        position: static;
        background: none;
        text-indent: 0;

        &:hover {
            background-color: transparent;
        }
    }
}
.site-balloon .close,
.site-tip .close {
    margin: auto;
    top: 0;
    bottom: 0;
}

.html-rtl {
    .site-balloon, .site-tip, #lightbox, &.is-impala .modal {
        padding: 15px 15px 15px 45px;

        &:before, &:after {
            border-color: transparent;
            border-right: 18px solid #E3873B;
            border-top: 18px solid transparent;
            left: auto;
        }
        &:before {
            right: 34px;
            top: -18px;
        }
        &:after {
            right: 36px;
            top: -13px;
            border-right-color: #FCEFB7;
        }
        .close {
            right: auto;
            left: 15px;
        }
    }
}


/* All Manner of Banner */
.firstvisit #site-welcome {
    display: block;
}
#mobile-banner {
    font-size: 1.3em;
}
@media (max-width: 500px) {
    #mobile-banner {
        display: inline-block;
    }
}
.badbrowser {
    #site-welcome, #mobile-banner {
        display: none !important;
    }
}
.developer-hub .site-balloon,
.developer-hub .site-tip {
    display: none !important;
}

